fix overflow

--- a/static/style.sass
+++ b/static/style.sass
@@ -284,6 +284,7 @@ table
         position: absolute
 
 .author
+    color: var(--gray)
     @include dots
     .short, .handle, b
         font-weight: bold
